--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                                 <p>
                                                     <strong style="color:white;padding-right:22px;">Easy VPN Unlimited</strong>
                                                     <a class="footer-link" style="color:white;padding-right:22px;" href="mailto:hoangminhthanh@outlook.com">Contact Us</a>
-                                                    <a class="footer-link" style="color:white;" href="./privacypolicy.html">Privacy Policy</a>
+                                                    <a class="footer-link" style="color:white;padding-left:22px;" href="./privacypolicy.html">Privacy Policy</a>
                                                 </p>
                                             </div>
                                         </div>
