--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 </div>
             </div>
-            <main id="main">
+            <main id="main" style="font-family:Roboto">
                 <section class="hero">
                     <div class="app-container container-fluid">
                         <div class="app-container-wrapper">
@@ -56,7 +56,7 @@
                                                 </div>
                                                 <p>
                                                     <strong style="color:white;padding-right:22px;">Easy VPN Unlimited</strong>
-                                                    <a class="footer-link" style="color:white;padding-right:22px;" href="mailto:hoangminhthanh@outlook.com">Contact Us</a>
+                                                    <a class="footer-link" style="color:white;" href="mailto:hoangminhthanh@outlook.com">Contact Us</a>
                                                     <a class="footer-link" style="color:white;padding-left:22px;" href="./privacypolicy.html">Privacy Policy</a>
                                                 </p>
                                             </div>
