--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -24,7 +24,7 @@
             <div class="dark">
                 <div class="blurred-cover" style="background-color:rgb(11,11,27);background-image:none;filter:none;-webkit-filter:none;"></div>
             </div>
-            <main style="padding: 30px; color: white">
+            <main style="padding: 30px; color: white;font-family:Roboto">
                 <div class="description app-field">
                     <p style="color: yellow">Privacy Policy</p>
                     <p align="justify" style="padding: 10px">
