- Update privacy policy

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -26,7 +26,63 @@
             </div>
             <main style="padding: 30px; color: white;font-family:Roboto">
                 <div class="description app-field">
-                    <p style="color: yellow">Privacy Policy</p>
+                    <p>PRIVACY POLICY</p>
+                    <br/>
+                    <p># INFORMATION WE COLLECT</p>
+                    <br/>
+                    <p>a. Personal Information.</p>
+                    <p>We do not collect Personal Information. “Personal Information” is information
+                            that identifies you or another person, such as your first name and last name,
+                            physical addresses, email addresses, telephone, fax, SSN, information stored
+                            within your device.</p>
+                    <p>b. Non-personal Information.</p>
+                    <p>We collect your non-personal information when you visit our website, including
+                            your device information, operation system, logs.</p>
+                    <p>c. Information you provide.</p>
+                    <p>We may collect your information when you communicate with us or you give us.</p>
+                    <br/>
+                    <p># HOW WE USE INFORMATION</p>
+                    <br/>
+                    <p>a. Personal Information.</p>
+                    <p>We do not store Personal Information and therefore we do not disclose your
+                            Personal Information.</p>
+                    <p>b. Non-Personal Information.</p>
+                    <p>We do not sell, trade, or otherwise transfer to outside parties your
+                            information. We do not combine Non-Personal Information with Personal
+                            Information (such as combining your name with your unique User Device number).</p>
+                    <p>c. Legal Reasons</p>
+                    <p>We will access, use or disclose your information with other organizations or
+                            entities for reasons that required by any applicable law, regulation, legal
+                            process or enforceable governmental request; detect, prevent, or otherwise
+                            fraud, security or technical issues; protect against harm to the rights,
+                            property, our users or the public as required or
+                            permitted by law.</p>
+                    <br/>
+                    <p># SECURITY</p>
+                    <br/>
+                    <p>Easy VPN Unlimited is very concerned about safeguarding the confidentiality of your
+                            information. We do not collect Personal Information, and we employ
+                            administrative, physical and electronic measures designed to protect your
+                            Non-Personal Information from unauthorized access and use. Please be aware that
+                            no security measures that we take to protect your information is absolutely
+                            guaranteed to avoid unauthorized access or use of your Non-Personal Information
+                            which is impenetrable.</p>
+                    <br/>
+                    <p># SENSITIVE INFORMATION</p>
+                    <br/>
+                    <p>We ask that you not send us, and you not disclose, any sensitive Personal
+                            Information (e.g., information related to racial or ethnic origin, political
+                            opinions, religion or other beliefs, health, sexual orientation, criminal
+                            background or membership in past organizations, including trade union
+                            memberships) on or through an Application, the Services or the Site or
+                            otherwise to us.</p>
+                    <br/>
+                    <p># CONTACT US</p>
+                    <br/>
+                    <p>If you have any questions or comments about this Policy or our privacy
+                            practices, or to report any violations of the Policy or abuse of the Services
+                            or the Site, please contact us at hoangminhthanh@outlook.com.</p>
+                    <!-- <p style="color: yellow">Privacy Policy</p>
                     <p align="justify" style="padding: 10px">
                         • This privacy policy sets out how Our Application uses and protects any information that you give Our Application when you use one of our applications. Our Application is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using this app, then you can be assured that it will only be used in accordance with this privacy statement. Our Application may change this policy from time to time by updating this page. You should check this page from time to time to ensure that you are happy with any changes. 
                         
@@ -41,7 +97,7 @@
                     <p style="padding: 10px">• Contact submissions and e-mails will be used for correspondence.</p>
                     <p style="color: yellow">Easy VPN Unlimited does not collect or log any traffic or use of its Virtual Private Network ("VPN") or Proxy.</p>
                     <p>Controlling your personal information</p>
-                    <p align="justify" style="padding: 10px">• We will not sell, distribute or lease your personal information to third parties unless we have your permission or are required by law to do so. We may use your personal information to send you promotional information about our own content which we think you may find interesting. You may request details of personal information which we hold about you under the Data Protection Act 1998. A small fee will be payable. If you would like a copy of the information held on you please contact us. If you believe that any information we are holding on you is incorrect or incomplete, please contact us as soon as possible. We will promptly correct any information found to be incorrect.</p>
+                    <p align="justify" style="padding: 10px">• We will not sell, distribute or lease your personal information to third parties unless we have your permission or are required by law to do so. We may use your personal information to send you promotional information about our own content which we think you may find interesting. You may request details of personal information which we hold about you under the Data Protection Act 1998. A small fee will be payable. If you would like a copy of the information held on you please contact us. If you believe that any information we are holding on you is incorrect or incomplete, please contact us as soon as possible. We will promptly correct any information found to be incorrect.</p> -->
                 </div>
             </main>
         </div>
