--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -24,7 +24,7 @@
             <div class="dark">
                 <div class="blurred-cover" style="background-color:rgb(11,11,27);background-image:none;filter:none;-webkit-filter:none;"></div>
             </div>
-            <main style="padding: 30px; color: white;font-family:Roboto">
+            <main style="padding: 30px; color: white;font-family:Roboto;align="justify"">
                 <div class="description app-field">
                     <p>PRIVACY POLICY</p>
                     <br/>
