--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -24,22 +24,22 @@
             <div class="dark">
                 <div class="blurred-cover" style="background-color:rgb(11,11,27);background-image:none;filter:none;-webkit-filter:none;"></div>
             </div>
-            <main style="padding: 30px; color: white;font-family:Roboto;align="justify"">
+            <main style="padding: 30px; color: white;font-family:Roboto;">
                 <div class="description app-field">
                     <p>PRIVACY POLICY</p>
                     <br/>
                     <p># INFORMATION WE COLLECT</p>
                     <br/>
                     <p>a. Personal Information.</p>
-                    <p>We do not collect Personal Information. “Personal Information” is information
+                    <p align="justify">We do not collect Personal Information. “Personal Information” is information
                             that identifies you or another person, such as your first name and last name,
                             physical addresses, email addresses, telephone, fax, SSN, information stored
                             within your device.</p>
                     <p>b. Non-personal Information.</p>
-                    <p>We collect your non-personal information when you visit our website, including
+                    <p align="justify">We collect your non-personal information when you visit our website, including
                             your device information, operation system, logs.</p>
                     <p>c. Information you provide.</p>
-                    <p>We may collect your information when you communicate with us or you give us.</p>
+                    <p align="justify">We may collect your information when you communicate with us or you give us.</p>
                     <br/>
                     <p># HOW WE USE INFORMATION</p>
                     <br/>
@@ -47,11 +47,11 @@
                     <p>We do not store Personal Information and therefore we do not disclose your
                             Personal Information.</p>
                     <p>b. Non-Personal Information.</p>
-                    <p>We do not sell, trade, or otherwise transfer to outside parties your
+                    <p align="justify">We do not sell, trade, or otherwise transfer to outside parties your
                             information. We do not combine Non-Personal Information with Personal
                             Information (such as combining your name with your unique User Device number).</p>
                     <p>c. Legal Reasons</p>
-                    <p>We will access, use or disclose your information with other organizations or
+                    <p align="justify">We will access, use or disclose your information with other organizations or
                             entities for reasons that required by any applicable law, regulation, legal
                             process or enforceable governmental request; detect, prevent, or otherwise
                             fraud, security or technical issues; protect against harm to the rights,
@@ -60,7 +60,7 @@
                     <br/>
                     <p># SECURITY</p>
                     <br/>
-                    <p>Easy VPN Unlimited is very concerned about safeguarding the confidentiality of your
+                    <p align="justify">Easy VPN Unlimited is very concerned about safeguarding the confidentiality of your
                             information. We do not collect Personal Information, and we employ
                             administrative, physical and electronic measures designed to protect your
                             Non-Personal Information from unauthorized access and use. Please be aware that
@@ -70,7 +70,7 @@
                     <br/>
                     <p># SENSITIVE INFORMATION</p>
                     <br/>
-                    <p>We ask that you not send us, and you not disclose, any sensitive Personal
+                    <p align="justify">We ask that you not send us, and you not disclose, any sensitive Personal
                             Information (e.g., information related to racial or ethnic origin, political
                             opinions, religion or other beliefs, health, sexual orientation, criminal
                             background or membership in past organizations, including trade union
@@ -79,7 +79,7 @@
                     <br/>
                     <p># CONTACT US</p>
                     <br/>
-                    <p>If you have any questions or comments about this Policy or our privacy
+                    <p align="justify">If you have any questions or comments about this Policy or our privacy
                             practices, or to report any violations of the Policy or abuse of the Services
                             or the Site, please contact us at hoangminhthanh@outlook.com.</p>
                     <!-- <p style="color: yellow">Privacy Policy</p>
