--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -44,7 +44,7 @@
                     <p># HOW WE USE INFORMATION</p>
                     <br/>
                     <p>a. Personal Information.</p>
-                    <p>We do not store Personal Information and therefore we do not disclose your
+                    <p align="justify">We do not store Personal Information and therefore we do not disclose your
                             Personal Information.</p>
                     <p>b. Non-Personal Information.</p>
                     <p align="justify">We do not sell, trade, or otherwise transfer to outside parties your
